// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`esbuild sanity check no-transform.js 1`] = `
"\\"use strict\\";
var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __copyProps = (to, from, except, desc) => {
  if (from && typeof from === \\"object\\" || typeof from === \\"function\\") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key) && key !== except)
        __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
  }
  return to;
};
var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);
var no_transform_exports = {};
__export(no_transform_exports, {
  hello: () => hello
});
module.exports = __toCommonJS(no_transform_exports);
function hello(name) {
  return \`Hello \${name != null ? name : \\"World\\"}!\`;
}
"
`;

exports[`esbuild with lodashOptimizeImports() CJS: standard-and-fp.js 1`] = `
"\\"use strict\\";
var __create = Object.create;
var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __copyProps = (to, from, except, desc) => {
  if (from && typeof from === \\"object\\" || typeof from === \\"function\\") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key) && key !== except)
        __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
  }
  return to;
};
var __toESM = (mod, isNodeMode, target) => (target = mod != null ? __create(__getProtoOf(mod)) : {}, __copyProps(isNodeMode || !mod || !mod.__esModule ? __defProp(target, \\"default\\", { value: mod, enumerable: true }) : target, mod));
var __toCommonJS = (mod) => __copyProps(__defProp({}, \\"__esModule\\", { value: true }), mod);
var standard_and_fp_exports = {};
__export(standard_and_fp_exports, {
  isNonNilArray: () => isNonNilArray
});
module.exports = __toCommonJS(standard_and_fp_exports);
var import_isNil = __toESM(require(\\"lodash/isNil.js\\"));
var import_negate = __toESM(require(\\"lodash/negate.js\\"));
var import_every = __toESM(require(\\"lodash/fp/every.js\\"));
const everyNonNil = (0, import_every.default)((0, import_negate.default)(import_isNil.default));
function isNonNilArray(input) {
  return Array.isArray(input) && everyNonNil(input);
}
"
`;

exports[`esbuild with lodashOptimizeImports() ESM: standard-and-fp.js 1`] = `
"import { isNil } from \\"lodash-es\\";
import { negate } from \\"lodash-es\\";
import { every } from \\"lodash-es/fp\\";
const everyNonNil = every(negate(isNil));
function isNonNilArray(input) {
  return Array.isArray(input) && everyNonNil(input);
}
export {
  isNonNilArray
};
"
`;
